[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avista_digital_exchange_sdk"
version = "0.0.18"
authors = [
  { name="Justin Whicker", email="jwhicker@urbanova.org"},
  {  name="Jon Thompson", email="jon.thompson@avistacorp.com" }
]
description = "SDK to programmatically access the Avista Digital Exchange"
long_description = file: README.md, LICENSE.txt, CHANGES.txt
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[options]
install_requires =
    requests

[project.urls]
"Homepage" = "https://energy.collaboratives.io/"
"Bug Tracker" = "https://github.com/Avista-Digital-Innovation/avista-digital-exchange-sdk/issues"